// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core/graph toJSON / fromJSON snapshot testing a trivial graph 1`] = `
Array [
  Object {
    "type": "sourcecred/graph",
    "version": "0.4.0",
  },
  Object {
    "edges": Array [
      Object {
        "address": Array [
          "edge",
        ],
        "dstIndex": 0,
        "srcIndex": 1,
      },
      Object {
        "address": Array [
          "wat",
        ],
        "dstIndex": 0,
        "srcIndex": 1,
      },
    ],
    "nodes": Array [
      Array [
        "dst",
      ],
      Array [
        "src",
      ],
    ],
  },
]
`;

exports[`core/graph toJSON / fromJSON snapshot testing an advanced graph 1`] = `
Array [
  Object {
    "type": "sourcecred/graph",
    "version": "0.4.0",
  },
  Object {
    "edges": Array [
      Object {
        "address": Array [
          "hom",
          "1",
        ],
        "dstIndex": 0,
        "srcIndex": 3,
      },
      Object {
        "address": Array [
          "hom",
          "2",
        ],
        "dstIndex": 0,
        "srcIndex": 3,
      },
      Object {
        "address": Array [
          "loop",
        ],
        "dstIndex": 2,
        "srcIndex": 2,
      },
    ],
    "nodes": Array [
      Array [
        "dst",
      ],
      Array [
        "isolated",
      ],
      Array [
        "loop",
      ],
      Array [
        "src",
      ],
    ],
  },
]
`;
